[project]
name = "swarm-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dspy>=3.1.3",
    "langfuse>=3.14.5",
    "litellm>=1.81.16",
    "lxml>=6.0.2",
    "markdown>=3.10.2",
    "openinference-instrumentation-dspy>=0.1.33",
    "openinference-instrumentation-litellm>=0.1.29",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 120